# taptimer

./: .gitignore  Cargo.toml  LICENSE
assets/: taptimer.desktop
debian/taptimer/DEBIAN/: control
src/: main.rs
